feat: added seen status to notifications
